<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="size_of_group">Size of group</string>
    <string name="enter_number_of_people">Enter number of people</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="smoking_or_non_smoking_area">Smoking or Non-smoking area</string>
    <string name="reserve">Reserve</string>
    <string name="reset">Reset</string>
    <string name="display_reservation_info">Display Reservation Info</string>
    <string name="smoking">Smoking</string>
    <string name="pic1">TODO</string>
    <string name="enter_no_of_people">Enter no. of people</string>
</resources>